--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
 <!DOCTYPE html>
+<!-- Imports go here-->
+
+<head>
+
+</head>
+
+<body>
+    <header>
+
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
+</body>
