Restructured layout, added initial icomoon support and implemented fonts.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <html>
     <head>
         <title>Full Service Digital Agency | Cambridgeshire & Norfolk | Netmatters</title>
+
+        <link rel="stylesheet" href="assets/iconmoon/style.css">
         <link rel="stylesheet" href="css/application.css">
-        <link rel="shortcut icon" href="/icon/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="/img/icon/favicon.ico" type="image/x-icon">
     </head>
     
     <body>
@@ -60,7 +62,7 @@
     
         <main>
             <div class="content-services">
-
+                <span class="icon-home"></span>
             </div>
             <div class="content-welcome">
 
