Experimented with header and started adding content

--- a/index.html
+++ b/index.html
@@ -22,41 +22,13 @@
             </div>
             <nav class="main-nav">
                 <ul class="main-nav-list">
-                    <li class="nav-item nav-icon--sof"><small>BESPOKE</small>SOFTWARE
-                        <ul class="sub-nav-list">
-                            <p>Test</p>
-                        </ul>
-                    </li>
-                    <li class="nav-item nav-icon--sup"><small>IT</small>SUPPORT
-                        <ul class="sub-nav-list">
-                            <p>Test</p>
-                        </ul>
-                    </li>
-                    <li class="nav-item nav-icon--mar"><small>DIGITAL</small>MARKETING
-                        <ul class="sub-nav-list">
-                            <p>Test</p>
-                        </ul>
-                    </li>
-                    <li class="nav-item nav-icon--ser"><small>TELECOMS</small>SERVICES
-                        <ul class="sub-nav-list">
-                            <p>Test</p>
-                        </ul>
-                    </li>
-                    <li class="nav-item nav-icon--des"><small>WEB</small>DESIGN
-                        <ul class="sub-nav-list">
-                            <p>Test</p>
-                        </ul>
-                    </li>
-                    <li class="nav-item nav-icon--sec" ><small>CYBER</small>SECURITY
-                        <ul class="sub-nav-list">
-                            <p>Test</p>
-                        </ul>
-                    </li>
-                    <li class="nav-item nav-icon--cou"><small>DEVELOPER</small>COURSE
-                        <ul class="sub-nav-list">
-                            <p>Test</p>
-                        </ul>
-                    </li>
+                    <li class="nav-item" id="sof"><a href="#"><small>BESPOKE</small>SOFTWARE</a></li>
+                    <li class="nav-item" id="sup"><a href="#"><small>IT</small>SUPPORT</a></li>
+                    <li class="nav-item" id="mar"><a href="#"><small>DIGITAL</small>MARKETING</a></li>
+                    <li class="nav-item" id="ser"><a href="#"><small>TELECOMS</small>SERVICES</a></li>
+                    <li class="nav-item" id="des"><a href="#"><small>WEB</small>DESIGN</a></li>
+                    <li class="nav-item" id="sec"><a href="#"><small>CYBER</small>SECURITY</a></li>
+                    <li class="nav-item" id="cou"><a href="#"><small>DEVELOPER</small>COURSE</a></li>
                 </ul>
             </nav>
         </header>
@@ -67,25 +39,61 @@
 
         <main>
             <div class="content-services">
-                Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-
-Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-
-Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-
-Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-
-Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-
-Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-
-Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-
-Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-
-Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-
-Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+                <div class="section-heading">
+                    <h1>Our Services</h1>
+                    <h2>View Our Work</h2>
+                </div>
+                <ul class="content-items">
+                    <li>
+                        <div class="content-item-box major">
+                            <h3>Bespoke Software</h3>
+                            <p>Text</p>
+                            <button>Read More</button>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="content-item-box major">
+                            <h3>IT Support</h3>
+                            <p>Text</p>
+                            <button>Read More</button>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="content-item-box major">
+                            <h3>Digital Marketing</h3>
+                            <p>Text</p>
+                            <button>Read More</button>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="content-item-box minor">
+                            <h3>Telecoms Services</h3>
+                            <p>Text</p>
+                            <button>Read More</button>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="content-item-box minor">
+                            <h3>Web Design</h3>
+                            <p>Text</p>
+                            <button>Read More</button>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="content-item-box minor">
+                            <h3>Cyber Secuirity</h3>
+                            <p>Text</p>
+                            <button>Read More</button>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="content-item-box minor">
+                            <h3>Developer Training</h3>
+                            <p>Text</p>
+                            <button>Read More</button>
+                        </div>
+                    </li>
+                </ul>
             </div>
             <div class="content-welcome">
 
