--- a/index.html
+++ b/index.html
@@ -34,10 +34,16 @@
         </header>
     
         <aside id="sidebar">
-            Sidebar
+            <button onclick="toggleSidebar()">Burger</button>
+            <p>Text</p>
         </aside>
 
         <main>
+            <div class="banner">
+                <div class="banner-item active">
+                    <p>Hi</p>
+                </div>
+            </div>
             <div class="content-services">
                 <div class="section-heading">
                     <h1>Our Services</h1>
@@ -46,50 +52,57 @@
                 <ul class="content-items">
                     <li>
                         <div class="content-item-box major">
+                            <span class="icon-home">
                             <h3>Bespoke Software</h3>
-                            <p>Text</p>
+                            <p>Bespoke software solutions for all your business needs including integrations and reporting.</p>
                             <button>Read More</button>
                         </div>
                     </li>
                     <li>
                         <div class="content-item-box major">
+                            <span class="icon-home">
                             <h3>IT Support</h3>
-                            <p>Text</p>
+                            <p>Fully managed IT support and consultancy packages tailored to meet your exact business needs.</p>
                             <button>Read More</button>
                         </div>
                     </li>
                     <li>
                         <div class="content-item-box major">
+                            <span class="icon-home">
                             <h3>Digital Marketing</h3>
-                            <p>Text</p>
+                            <p>Driven brand awareness & ROI through creative digital marketing campaigns.</p>
                             <button>Read More</button>
                         </div>
                     </li>
                     <li>
                         <div class="content-item-box minor">
+                            <span class="icon-home">
                             <h3>Telecoms Services</h3>
-                            <p>Text</p>
+                            <p>Business telephony solutions including mobile & connectivity solutions.</p>
                             <button>Read More</button>
                         </div>
                     </li>
                     <li>
                         <div class="content-item-box minor">
+                            <span class="icon-home">
                             <h3>Web Design</h3>
-                            <p>Text</p>
+                            <p>User-centric design for businesses looking to make a lasting impression.</p>
                             <button>Read More</button>
                         </div>
                     </li>
                     <li>
                         <div class="content-item-box minor">
+                            <span class="icon-home">
                             <h3>Cyber Secuirity</h3>
-                            <p>Text</p>
+                            <p>Prevention, testing, consultancy & breach management services.</p>
                             <button>Read More</button>
                         </div>
                     </li>
                     <li>
                         <div class="content-item-box minor">
+                            <span class="icon-home">
                             <h3>Developer Training</h3>
-                            <p>Text</p>
+                            <p>Web design & software training courses designed to secure a job in tech.</p>
                             <button>Read More</button>
                         </div>
                     </li>
