--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Full Service Digital Agency | Cambridgeshire & Norfolk | Netmatters</title>
 
-        <link rel="stylesheet" href="assets/iconmoon/style.css">
+        <link rel="stylesheet" href="./assets/iconmoon/style.css">
         <link rel="stylesheet" href="css/application.css">
         <link rel="shortcut icon" href="img/icon/favicon.ico" type="image/x-icon">
         <script src="assets/js/app.js" type="text/javascript" defer></script>
@@ -39,17 +39,23 @@
         </aside>
 
         <main>
-            <div class="banner">
-                <div class="banner-item active">
-                    <p>Hi</p>
+            <div class="banner-roulette">
+                <div class="banner-item active-banner">
+                    <div class="banner-item-content">
+                        <h1>The East of England's Leading Technology Company</h1>
+                        <h2>Performance-driven digital and technology services with complete transparency</h2>
+                        <button>Why choose us?</button>
+                    </div>
+
                 </div>
+                <!-- Add more banner items here -->
             </div>
-            <div class="content-services">
+            <div class="content-services has-main-margin">
                 <div class="section-heading">
                     <h1>Our Services</h1>
                     <h2>View Our Work</h2>
                 </div>
-                <ul class="content-items">
+                <ul class="content-items has-main-margin">
                     <li>
                         <div class="content-item-box major">
                             <span class="icon-home">
