Pretty much finished banner section, fine-tuned header position attributes and implemented buttons

--- a/index.html
+++ b/index.html
@@ -139,6 +139,15 @@
                     </div>
                 <!-- Add more banner items here -->
                 </div>
+                <div class="banner-dots">
+                    <div class="banner-dot active-dot"></div>
+                    <div class="banner-dot"></div>
+                    <div class="banner-dot"></div>
+                    <div class="banner-dot"></div>
+                    <div class="banner-dot"></div>
+                    <div class="banner-dot"></div>
+                    <div class="banner-dot"></div>
+                </div>
             </div>
             <div class="content-services has-main-margin">
                 <div class="container">
