Started sidebar, finished banner and buttons

--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
                     <button id="button-support">SUPPORT</button>
                     <button id="button-contact">CONTACT</button>
                     <input type="text" name="" id="searchbox">
-                    <input type="submit" id="button-search" value="Search">
-                    <button onclick="toggleSidebar()">Burger</button>
+                    <input type="submit" id="button-search" value="S">
+                    <button onclick="toggleSidebar()">B</button>
                 </div>                    
-            </div>
-                
+            </div>            
             <nav class="main-nav">
                 <div class="container">
                     <ul class="main-nav-list">
@@ -122,8 +121,8 @@
     
         <aside id="sidebar">
             <div class="container">
-                <button onclick="toggleSidebar()">Burger</button>
-                <p>Text</p>
+                <button id="button-contact">CONTACT US</button>
+                <span class="nav-item" id="sof"><a href="#"><small>BESPOKE</small>SOFTWARE</a>
             </div>
         </aside>
 
@@ -140,13 +139,13 @@
                 <!-- Add more banner items here -->
                 </div>
                 <div class="banner-dots">
-                    <div class="banner-dot active-dot"></div>
-                    <div class="banner-dot"></div>
-                    <div class="banner-dot"></div>
-                    <div class="banner-dot"></div>
-                    <div class="banner-dot"></div>
-                    <div class="banner-dot"></div>
-                    <div class="banner-dot"></div>
+                    <div class="banner-dot active-dot" id="dot-a" onclick=""></div>
+                    <div class="banner-dot" id="dot-b" onclick=""></div>
+                    <div class="banner-dot" id="dot-c" onclick=""></div>
+                    <div class="banner-dot" id="dot-d" onclick=""></div>
+                    <div class="banner-dot" id="dot-e" onclick=""></div>
+                    <div class="banner-dot" id="dot-f" onclick=""></div>
+                    <div class="banner-dot" id="dot-g" onclick=""></div>
                 </div>
             </div>
             <div class="content-services has-main-margin">
