Loads of nice changes and finished the footer

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <div class="banner-dot" id="dot-g" onclick=""></div>
                 </div>
             </div>
-            <div class="content-services has-main-margin">
+            <div class="content-services">
                 <div class="container">
                     <div class="section-heading">
                         <h1>Our Services</h1>
@@ -238,14 +238,16 @@
         <footer>
             <div class="container">
                 <div class="footer-links">
-                    <div class="footer-links--section">
+                    <div class="footer-links--section footer-links--firstsection">
                         <img id="footer-logo" src="img/header-logo.webp" alt="">
                         <div class="footer-links--follow">
                             <h1>Follow us on:</h1>
-                            <button>Facebook</button>
-                            <button>LinkedIn</button>
-                            <button>X</button>
-                            <button>Instagram</button>
+                            <div class="footer-links--follow-buttons">
+                                <a id="follow-fb" href="#"><span class="icon-home"></a>
+                                <a id="follow-li" href="#"><span class="icon-home"></a>
+                                <a id="follow-tw" href="#"><span class="icon-home"></a>
+                                <a id="follow-ig" href="#"><span class="icon-home"></a>
+                            </div>
                         </div>
                     </div>
                     <div class="footer-links--section">
@@ -298,11 +300,13 @@
                         </ul>
                     </div>
                 </div>
+            </div>
 
-                <div class="footer-copyright">
+            <div class="footer-copyright">
+                <div class="container">
                     <p>© Copyright Netmatters 2025. All rights reserved. - <a href="#">Sitemap</a></p>
                 </div>
-            </div>
+            </div>            
         </footer>
     </body>
 </html>
