Added a new mixin and hover colours, replaced white mentions with a var

--- a/index.html
+++ b/index.html
@@ -243,10 +243,10 @@
                         <div class="footer-links--follow">
                             <h1>Follow us on:</h1>
                             <div class="footer-links--follow-buttons">
-                                <a id="follow-fb" href="#"><span class="icon-home"></a>
-                                <a id="follow-li" href="#"><span class="icon-home"></a>
-                                <a id="follow-tw" href="#"><span class="icon-home"></a>
-                                <a id="follow-ig" href="#"><span class="icon-home"></a>
+                                <a id="follow-fb" class="follow-button" href="#"><span class="icon-home"></a>
+                                <a id="follow-li" class="follow-button" href="#"><span class="icon-home"></a>
+                                <a id="follow-tw" class="follow-button" href="#"><span class="icon-home"></a>
+                                <a id="follow-ig" class="follow-button" href="#"><span class="icon-home"></a>
                             </div>
                         </div>
                     </div>
