Reimplemented and restructured banner

--- a/index.html
+++ b/index.html
@@ -127,27 +127,30 @@
         </aside>
 
         <main>
-            <div class="banner-roulette">
-                <div class="container">
+            <div id="banner">
+                <div class="banner-roulette">                
                     <div class="banner-item active-banner">
                         <div class="banner-item-content">
-                            <h1>The East of England's Leading Technology Company</h1>
-                            <h2>Performance-driven digital and technology services with complete transparency</h2>
-                            <button>Why choose us?</button>
+                            <div class="container">
+                                <h1>The East of England's Leading Technology Company</h1>
+                                <h2>Performance-driven digital and technology services with complete transparency</h2>
+                                <button class="banner-item-button">Why choose us?</button>
+                            </div>
                         </div>
                     </div>
-                <!-- Add more banner items here -->
+                <!-- Add more banner items here -->                
                 </div>
                 <div class="banner-dots">
-                    <div class="banner-dot active-dot" id="dot-a" onclick=""></div>
-                    <div class="banner-dot" id="dot-b" onclick=""></div>
-                    <div class="banner-dot" id="dot-c" onclick=""></div>
-                    <div class="banner-dot" id="dot-d" onclick=""></div>
-                    <div class="banner-dot" id="dot-e" onclick=""></div>
-                    <div class="banner-dot" id="dot-f" onclick=""></div>
-                    <div class="banner-dot" id="dot-g" onclick=""></div>
+                    <span class="banner-dot active-dot" id="dot-a" onclick=""></span>
+                    <span class="banner-dot" id="dot-b" onclick=""></span>
+                    <span class="banner-dot" id="dot-c" onclick=""></span>
+                    <span class="banner-dot" id="dot-d" onclick=""></span>
+                    <span class="banner-dot" id="dot-e" onclick=""></span>
+                    <span class="banner-dot" id="dot-f" onclick=""></span>
+                    <span class="banner-dot" id="dot-g" onclick=""></span>
                 </div>
             </div>
+
             <div class="content-services">
                 <div class="container">
                     <div class="section-heading">
