--- a/index.html
+++ b/index.html
@@ -159,63 +159,62 @@
                     </div>
                     <ul class="content-items">
                         <li>
-                            <div class="content-item-box major">
-                                <span class="icon-home">
+                            <div id="sof" class="content-item-box major">
+                                <div class="content-item__icon icon-home"></div>
                                 <h3>Bespoke Software</h3>
                                 <p>Bespoke software solutions for all your business needs including integrations and reporting.</p>
                                 <button>Read More</button>
                             </div>
                         </li>
                         <li>
-                            <div class="content-item-box major">
-                                <span class="icon-home">
+                            <div id="sup" class="content-item-box major">
+                                <div class="content-item__icon icon-home"></div>
                                 <h3>IT Support</h3>
                                 <p>Fully managed IT support and consultancy packages tailored to meet your exact business needs.</p>
                                 <button>Read More</button>
                             </div>
                         </li>
                         <li>
-                            <div class="content-item-box major">
-                                <span class="icon-home">
+                            <div id="mar" class="content-item-box major">
+                                <div class="content-item__icon icon-home"></div>
                                 <h3>Digital Marketing</h3>
                                 <p>Driven brand awareness & ROI through creative digital marketing campaigns.</p>
                                 <button>Read More</button>
                             </div>
                         </li>
                         <li>
-                            <div class="content-item-box minor">
-                                <span class="icon-home">
+                            <div id="ser" class="content-item-box minor">
+                                <div class="content-item__icon icon-home"></div>
                                 <h3>Telecoms Services</h3>
                                 <p>Business telephony solutions including mobile & connectivity solutions.</p>
                                 <button>Read More</button>
                             </div>
                         </li>
                         <li>
-                            <div class="content-item-box minor">
-                                <span class="icon-home">
+                            <div id="des" class="content-item-box minor">
+                                <div class="content-item__icon icon-home"></div>
                                 <h3>Web Design</h3>
                                 <p>User-centric design for businesses looking to make a lasting impression.</p>
                                 <button>Read More</button>
                             </div>
                         </li>
                         <li>
-                            <div class="content-item-box minor">
-                                <span class="icon-home">
+                            <div id="sec" class="content-item-box minor">
+                                <div class="content-item__icon icon-home"></div>
                                 <h3>Cyber Secuirity</h3>
                                 <p>Prevention, testing, consultancy & breach management services.</p>
                                 <button>Read More</button>
                             </div>
                         </li>
                         <li>
-                            <div class="content-item-box minor">
-                                <span class="icon-home">
+                            <div id="dev" class="content-item-box minor">
+                                <div class="content-item__icon icon-home"></div>
                                 <h3>Developer Training</h3>
                                 <p>Web design & software training courses designed to secure a job in tech.</p>
                                 <button>Read More</button>
                             </div>
                         </li>
-                    </ul>
-                    
+                    </ul>                    
                 </div>
 
 
