Initial implementation of the icon banners and popups

--- a/index.html
+++ b/index.html
@@ -221,6 +221,34 @@
 
 
             </div>
+
+            <div class="slideshow" id="partners">
+                <div class="slideshow-element">
+                    <img src="img/partners/future-50.webp" alt="">
+                </div>
+                <div class="slideshow-element">
+                    <img src="img/partners/investing-in-future-growth.webp" alt="">
+                </div>
+                <div class="slideshow-element">
+                    <img src="img/partners/iso-27001.webp" alt="">
+                </div>
+                <div class="slideshow-element">
+                    <img src="img/partners/norfolk-carbon-charter.webp" alt="">
+                </div>
+                <div class="slideshow-element">
+                    <img src="img/partners/norfolk_prohelp.webp" alt="">
+                </div>
+                <div class="slideshow-element">
+                    <img src="img/partners/PPC_logo.webp" alt="">
+                </div>
+                <div class="slideshow-element">
+                    <img src="img/partners/princess-royal-training.webp" alt="">
+                </div>
+                <div class="slideshow-element">
+                    <img src="img/partners/qms.webp" alt="">
+                </div>
+            </div>
+
             <div class="content-welcome">
                 <div class="container">
 
@@ -231,9 +259,88 @@
 
                 </div>
             </div>
-            <div class="content-partners">
-                <div class="container">
-
+            <div class="slideshow" id="clients">
+                <div class="slideshow-element">
+                    <img src="img/clients/ashcroftlogo_landscape_goldblack_DP60P-small.webp" alt="">
+                    <div class="slideshow-submenu-banner">
+                        <div class="slideshow-submenu-content">
+                            <h3>Title</h3>
+                            <p>Text</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="slideshow-element">
+                    <img src="img/clients/busseys_logo.webp" alt="">
+                    <div class="slideshow-submenu-banner">
+                        <div class="slideshow-submenu-content">
+                            <h3>Title</h3>
+                            <p>Text</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="slideshow-element">
+                    <img src="img/clients/crane_logo.webp" alt="">
+                    <div class="slideshow-submenu-banner">
+                        <div class="slideshow-submenu-content">
+                            <h3>Title</h3>
+                            <p>Text</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="slideshow-element">
+                    <img src="img/clients/girl_guides_anglia.webp" alt="">
+                    <div class="slideshow-submenu-banner">
+                        <div class="slideshow-submenu-content">
+                            <h3>Title</h3>
+                            <p>Text</p>
+                            <button>hi</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="slideshow-element">
+                    <img src="img/clients/girls_day_school_trust_logob.webp" alt="">
+                    <div class="slideshow-submenu-banner">
+                        <div class="slideshow-submenu-content">
+                            <h3>Title</h3>
+                            <p>Text</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="slideshow-element">
+                    <img src="img/clients/howespercivallogo.webp" alt="">
+                    <div class="slideshow-submenu-banner">
+                        <div class="slideshow-submenu-content">
+                            <h3>Title</h3>
+                            <p>Text</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="slideshow-element">
+                    <img src="img/clients/onetravellerlogo_white_figuire.webp" alt="">
+                    <div class="slideshow-submenu-banner">
+                        <div class="slideshow-submenu-content">
+                            <h3>Title</h3>
+                            <p>Text</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="slideshow-element">
+                    <img src="img/clients/searles_logo.webp" alt="">
+                    <div class="slideshow-submenu-banner">
+                        <div class="slideshow-submenu-content">
+                            <h3>Title</h3>
+                            <p>Text</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="slideshow-element">
+                    <img src="img/clients/sweetzy_logo.webp" alt="">
+                    <div class="slideshow-submenu-banner">
+                        <div class="slideshow-submenu-content">
+                            <h3>Title</h3>
+                            <p>Text</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
