Fixed CSS for banner poppup but still goes off the page

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                         <div class="slideshow-submenu-content">
                             <h3>Title</h3>
                             <p>Text</p>
-                            <button>hi</button>
+                            <button>View our case study</button>
                         </div>
                     </div>
                 </div>
