Added cookies and animations

--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
                     <button id="button-support">SUPPORT</button>
                     <button id="button-contact">CONTACT</button>
                     <input type="text" name="" id="searchbox">
-                    <input type="submit" id="button-search" value="S">
-                    <button onclick="toggleSidebar()">B</button>
+                    <div class="submit-styles">
+                        <input type="submit" id="button-search" value=" ">
+                        <div class="icon-home nav-icon"></div>
+                    </div>
+                    <button id="button-nav" onclick="toggleSidebar()"><div class="icon-home nav-icon"></div></button>
                 </div>                    
             </div>            
+            <!-- Mobile Search bar div  -->
             <nav class="main-nav">
                 <div class="container">
                     <ul class="main-nav-list">
@@ -127,6 +131,15 @@
                 <iframe src="https://www.youtube-nocookie.com/embed/cS_CPy7YcaA?autoplay=1" width="100%" height="auto" title="Last Surprise -Scramble-" frameborder="0" allowfullscreen></iframe>
             </div>
         </aside>
+
+        <div id="cookies">
+            <div class="cookie-button">
+                <p>Manage Consent</p>
+            </div>
+            <div class="cookie-popup">
+
+            </div>
+        </div>
 
         <main>
             <div id="banner">
