--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
                             <p>We pride ourselves on being an ethical business and have a unique business offering and cost model that ensures you get the most from our relationship in an upfront manner.</p>
                         </div>
                         <div class="welcome-section1-buttons">
-                            <button id="welcome-button1">Button 1</button>
-                            <button id="welcome-button2">Button 2</button>
+                            <button id="welcome-button1">Why choose us?</button>
+                            <button id="welcome-button2">Our Culture</button>
                         </div>
                     </div>
                     <div class="welcome-section2">
@@ -298,8 +298,8 @@
                             <p>Eleanor Bishop, Head of Marketing - <a href="#"><b>Ashcroft Partnership LLP</b></a></p>
                         </div>
                         <div class="welcome-section2-buttons">
-                            <button id="welcome-button3">Button 3</button>
-                            <button id="welcome-button4">Button 4</button>
+                            <button id="welcome-button3">Google Reviews</button>
+                            <button id="welcome-button4">Trustpilot Reviews</button>
                         </div>
                     </div>
                 </div>
